# bill-management

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
assets/templates/bill_templates/: test_2_invoice.html  test_invoice.html
assets/templates/viewset_templates/: 404.html  auth.html
bma/: constants.py  utils.py
bma/base/: constants.py  models.py  utils.py
bma/baseapp/: admin.py  apps.py  models.py
bma/baseapp/migrations/: 0001_initial.py  0002_alter_baseusermodel_user.py
bma/core/: admin.py  apps.py  constants.py  forms.py  models.py  serializers.py  urls.py  validators.py  views.py
bma/core/migrations/: 0001_initial.py  0002_baseusermodel_groups_baseusermodel_is_superuser_and_more.py  0003_alter_baseusermodel_options_and_more.py
bma/core/templates/: auth.html  error.html
bma/payments/: admin.py  apps.py  client.py  models.py  serializers.py  views.py
bma/payments/migrations/: 0001_initial.py  0002_customer_upidetails_alter_payment_requested_by.py  0003_customer_created_customer_is_removed_and_more.py
bma/payments/templates/: public_datacapture.html
bma/requests/: admin.py  apps.py  models.py  serializers.py  views.py
bma/requests/migrations/: 0001_initial.py
bma/requests/templates/: basic_bill.html
bma/setup/jqs/request/: create_order.jq
bma/setup/templates/viewset_templates/: base.html
bma/setup/templates/viewset_templates/orders/: landing_page.html
config/: routers.py  settings.py
static/css/: main.css
